--- a/test/face_relate.ipynb
+++ b/test/face_relate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,25 +30,36 @@
     "    aligned_face = dlib.get_face_chip(img, landmarks)\n",
     "    face_recognizer = dlib.face_recognition_model_v1(os.path.join(proj_path, 'data/weights/dlib_face_recognition_resnet_model_v1.dat'))\n",
     "    face_feature = face_recognizer.compute_face_descriptor(aligned_face)\n",
+    "    print(face_feature.shape)\n",
     "    return np.array(face_feature).reshape(1, -1), results\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import faiss\n",
     "\n",
     "\n",
-    "index = faiss.IndexFlatL2(128)\n",
+    "index = faiss.IndexFlatIP(128)\n",
     "index = faiss.IndexIDMap(index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_norm(vec):\n",
+    "    return vec / np.linalg.norm(vec)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,40 +67,161 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "0: 384x640 2 faces, 81.0ms\n",
-      "Speed: 5.0ms preprocess, 81.0ms inference, 11.0ms postprocess per image at shape (1, 3, 384, 640)\n"
+      "0: 640x640 1 face, 14.8ms\n",
+      "Speed: 7.0ms preprocess, 14.8ms inference, 182.7ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "(128, 1)\n"
      ]
     }
    ],
    "source": [
-    "ff1, results = get_face_feature('two_face.jpg')\n",
-    "dis1, ids1 = index.search(ff1, 1)\n",
-    "# ff2 = get_face_feature('trump.jpg')\n",
-    "# dis2, ids2 = index.search(ff2, 1)\n",
-    "# ff3 = get_face_feature('biden.jpg')\n",
-    "# dis3, _ = index.search(ff3, 1)"
+    "ff1 = get_norm(get_face_feature('trump.jpg')[0])\n",
+    "# index.add_with_ids(ff1, np.array([0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 4])"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "0: 640x640 1 face, 16.0ms\n",
+      "Speed: 4.0ms preprocess, 16.0ms inference, 2.0ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "\n",
+      "0: 448x640 1 face, 49.0ms\n",
+      "Speed: 2.0ms preprocess, 49.0ms inference, 2.0ms postprocess per image at shape (1, 3, 448, 640)\n",
+      "\n",
+      "0: 640x448 1 face, 57.0ms\n",
+      "Speed: 4.0ms preprocess, 57.0ms inference, 2.0ms postprocess per image at shape (1, 3, 640, 448)\n"
+     ]
     }
    ],
    "source": [
-    "boxes = results[0].boxes\n",
-    "box = boxes[0].xyxy.shape\n",
-    "box"
+    "\n",
+    "ff2 = get_norm(get_face_feature('trump1.jpg')[0])\n",
+    "dis2, _ = index.search(ff2, 1)\n",
+    "ff3 = get_norm(get_face_feature('trump2.jpg')[0])\n",
+    "dis3, _ = index.search(ff3, 1)\n",
+    "ff4 = get_norm(get_face_feature('girl-1.jpg')[0])\n",
+    "dis4, _ = index.search(ff4, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[    0.92361]] [[    0.93602]] [[    0.83565]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dis2, dis3, dis4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\shann\\anaconda3\\envs\\SE\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = InceptionResnetV1(pretrained='vggface2').eval().to('cuda')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "0: 640x640 1 face, 77.8ms\n",
+      "Speed: 8.0ms preprocess, 77.8ms inference, 9.9ms postprocess per image at shape (1, 3, 640, 640)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "from ultralytics import YOLO\n",
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "import dlib\n",
+    "import numpy as np\n",
+    "\n",
+    "proj_path = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
+    "predictor = dlib.shape_predictor(os.path.join(proj_path, 'data/weights/shape_predictor_68_face_landmarks.dat'))\n",
+    "yolo_model = YOLO(os.path.join(proj_path, 'scripts/train_model/train2/weights/best.pt'))\n",
+    "\n",
+    "img = cv2.imread(os.path.join(proj_path, 'data/photos/' + 'trump.jpg'))\n",
+    "img_rgb = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+    "results = yolo_model(img_rgb)\n",
+    "results_boxes = results[0].boxes\n",
+    "x1, y1, x2, y2 = list(map(int, results_boxes.xyxy[0].tolist()))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "face = img_rgb[x1:x2, y1:y2]\n",
+    "feature = model(torch.from_numpy(face).permute(2, 0, 1).unsqueeze(0).float().to('cuda'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature = feature.cpu().detach().numpy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.12359458\n"
+     ]
+    }
+   ],
+   "source": [
+    "feature = feature / np.linalg.norm(feature)\n",
+    "print(np.min(feature))"
    ]
   }
  ],
