--- a/test/sql_execute.ipynb
+++ b/test/sql_execute.ipynb
@@ -27,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "[('class1',), ('class2',), ('class3',), ('new_table',), ('table_fk',)]"
+       "[('new',)]"
       ]
      },
      "execution_count": 2,
@@ -46,18 +46,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('x',)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "create_table_query = ''' \n",
-    "    CREATE TABLE class2 (\n",
-    "    id INT AUTO_INCREMENT PRIMARY KEY,\n",
-    "    name VARCHAR(100),\n",
-    "    gender ENUM('male', 'female'),\n",
-    "    age INT(3));'''\n",
+    "q = \"\"\"\n",
+    "    SELECT name\n",
+    "    FROM new\n",
+    "    WHERE id = 1\"\"\"\n",
     "\n",
-    "cursor.execute(create_table_query)"
+    "cursor.execute(q)\n",
+    "res = cursor.fetchall()\n",
+    "res"
    ]
   },
   {
