--- a/test/sql_execute.ipynb
+++ b/test/sql_execute.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,100 +153,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# conn.commit()\n",
-    "insert_id  = cursor.lastrowid \n",
-    "insert_id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "查询向量的索引：\n",
-      "[[172 239 661]]\n",
-      "查询向量的距离：\n",
-      "[[6.644008  7.1652584 7.1996493]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import faiss\n",
-    "\n",
-    "# 创建一个简单的向量数据集\n",
-    "d = 64  # 向量维度\n",
-    "nb = 1000  # 向量数量\n",
-    "nq = 1  # 查询向量的数量\n",
-    "\n",
-    "# 随机生成 1000 个 64 维的向量\n",
-    "xb = np.random.random((nb, d)).astype('float32')\n",
-    "\n",
-    "# 随机生成 5 个查询向量\n",
-    "xq = np.random.random((nq, d)).astype('float32')\n",
-    "\n",
-    "# 创建 Faiss 索引\n",
-    "index = faiss.IndexFlatL2(d)  # 使用 L2 距离度量\n",
-    "\n",
-    "# 将向量数据添加到索引中\n",
-    "index.add(xb)\n",
-    "\n",
-    "# 进行相似度搜索，返回最接近的 3 个向量\n",
-    "k = 3  # 取 3 个最接近的向量\n",
-    "distances, indices = index.search(xq, k)\n",
-    "\n",
-    "# 输出查询结果\n",
-    "print(\"查询向量的索引：\")\n",
-    "print(indices)\n",
-    "print(\"查询向量的距离：\")\n",
-    "print(distances)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 3)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "indices.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sql = f'SELECT id, name FROM test'\n",
+    "cursor.execute(sql)\n",
+    "res = cursor.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'a'), (2, 'trump')]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
   }
  ],
  "metadata": {
