--- a/test/face_relate.ipynb
+++ b/test/face_relate.ipynb
@@ -36,6 +36,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "from ultralytics import YOLO\n",
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "import dlib\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread('C:/Users/shann/Desktop/SE/attendance_system/data/photos/biden.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = YOLO('C:/Users/shann/Desktop/SE/attendance_system/scripts/train_model/train2/weights/best.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "0: 448x640 1 face, 56.8ms\n",
+      "Speed: 20.5ms preprocess, 56.8ms inference, 325.0ms postprocess per image at shape (1, 3, 448, 640)\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = model(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ultralytics.engine.results.Boxes object with attributes:\n",
+       "\n",
+       "cls: tensor([0.], device='cuda:0')\n",
+       "conf: tensor([0.8802], device='cuda:0')\n",
+       "data: tensor([[1.1629e+03, 1.7898e+02, 1.6600e+03, 8.6872e+02, 8.8022e-01, 0.0000e+00]], device='cuda:0')\n",
+       "id: None\n",
+       "is_track: False\n",
+       "orig_shape: (1366, 2048)\n",
+       "shape: torch.Size([1, 6])\n",
+       "xywh: tensor([[1411.4337,  523.8481,  497.1584,  689.7402]], device='cuda:0')\n",
+       "xywhn: tensor([[0.6892, 0.3835, 0.2428, 0.5049]], device='cuda:0')\n",
+       "xyxy: tensor([[1162.8545,  178.9779, 1660.0129,  868.7182]], device='cuda:0')\n",
+       "xyxyn: tensor([[0.5678, 0.1310, 0.8106, 0.6360]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res[0].boxes"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
