--- a/scripts/database_related_operation.ipynb
+++ b/scripts/database_related_operation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,14 @@
     "\n",
     "conn = connector.connect(    \n",
     "    host='localhost',\n",
-    "    database='attendance_system',\n",
     "    user='root',\n",
     "    password='root')\n",
     "\n",
-    "cursor = conn.cursor()\n"
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# 检查并创建schema\n",
+    "cursor.execute(\"CREATE SCHEMA IF NOT EXISTS attendance_system\")\n",
+    "cursor.execute(\"USE attendance_system\")\n"
    ]
   },
   {
@@ -55,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -100,7 +103,7 @@
     "    CREATE TABLE IF NOT EXISTS course (\n",
     "        course_name VARCHAR(100) NOT NULL PRIMARY KEY,\n",
     "        teacher_username VARCHAR(100) NOT NULL,\n",
-    "        FOREIGN KEY (teacher_username) REFERENCES teacher(username)\n",
+    "        FOREIGN KEY (teacher_username) REFERENCES teacher(username) On DELETE CASCADE\n",
     "    )\n",
     "    \"\"\"\n",
     "    cursor.execute(create_course_table)\n",
@@ -117,6 +120,20 @@
     "    \"\"\"\n",
     "    cursor.execute(create_course_student_table)\n",
     "\n",
+    "    # Create the attendance_info table\n",
+    "    create_attendance_info_table = \"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS attendance_info (\n",
+    "        date DATE NOT NULL,\n",
+    "        stu_id INT NOT NULL,\n",
+    "        course_name VARCHAR(100) NOT NULL,\n",
+    "        is_attendance BOOLEAN NOT NULL,\n",
+    "        PRIMARY KEY (date, stu_id, course_name),\n",
+    "        FOREIGN KEY (stu_id) REFERENCES student(id) ON DELETE CASCADE,\n",
+    "        FOREIGN KEY (course_name) REFERENCES course(course_name) ON DELETE CASCADE\n",
+    "    )\n",
+    "    \"\"\"\n",
+    "    cursor.execute(create_attendance_info_table)\n",
+    "\n",
     "    # Commit the changes\n",
     "    conn.commit()\n",
     "except Exception as e:\n",
@@ -127,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,165 +184,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('new',)]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "query = '''\n",
-    "        SHOW TABLES'''\n",
-    "\n",
-    "cursor.execute(query)\n",
-    "result = cursor.fetchall()\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('x',)]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "q = \"\"\"\n",
-    "    SELECT name\n",
-    "    FROM new\n",
-    "    WHERE id = 1\"\"\"\n",
-    "\n",
-    "cursor.execute(q)\n",
-    "res = cursor.fetchall()\n",
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"\"\"\n",
-    "        SELECT COUNT(*)\n",
-    "        FROM INFORMATION_SCHEMA.COLUMNS\n",
-    "        WHERE table_name = 'class1';\n",
-    "\"\"\"\n",
-    "table = 'class1'\n",
-    "cursor.execute('SELECT COUNT(*) FROM %s' %  table)\n",
-    "results = cursor.fetchone()\n"
+    "import random\n",
+    "\n",
+    "# 随机生成学生数据\n",
+    "students = []\n",
+    "genders = ['男', '女']\n",
+    "for i in range(1, 101):\n",
+    "    student = (i, random.choice(genders), str(random.randint(18, 25)), f'Student_{i}')\n",
+    "    students.append(student)\n",
+    "\n",
+    "try:\n",
+    "    # 开始事务\n",
+    "    conn.start_transaction()\n",
+    "\n",
+    "    # 插入学生数据\n",
+    "    cursor.executemany(\"INSERT INTO student (id, gender, age, name) VALUES (%s, %s, %s, %s)\", students)\n",
+    "\n",
+    "    # 随机选择30个学生填充course_student表\n",
+    "    for course in courses:\n",
+    "        selected_students = random.sample(students, 30)\n",
+    "        course_students = [(course[0], student[0]) for student in selected_students]\n",
+    "        cursor.executemany(\"INSERT INTO course_student (course_name, student_id) VALUES (%s, %s)\", course_students)\n",
+    "\n",
+    "    # 提交事务\n",
+    "    conn.commit()\n",
+    "except Exception as e:\n",
+    "    # 如果发生错误，回滚事务\n",
+    "    conn.rollback()\n",
+    "    print(f\"An error occurred: {e}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "# 定义日期范围\n",
+    "start_date = datetime.date(2025, 3, 26)\n",
+    "end_date = datetime.date(2025, 3, 30)\n",
+    "date_range = [start_date + datetime.timedelta(days=x) for x in range((end_date - start_date).days + 1)]\n",
+    "\n",
+    "attendance_data = []\n",
+    "\n",
+    "try:\n",
+    "    # 开始事务\n",
+    "    conn.start_transaction()\n",
+    "\n",
+    "    for date in date_range:\n",
+    "        # 每天随机选择20节课\n",
+    "        selected_courses = random.sample(courses, 20)\n",
+    "        for course in selected_courses:\n",
+    "            course_name = course[0]\n",
+    "            # 计算出勤率\n",
+    "            attendance_rate = random.uniform(0.8, 0.98)\n",
+    "            num_students = int(attendance_rate * len(selected_students))\n",
+    "            # 随机选择学生\n",
+    "            attending_students = random.sample(selected_students, num_students)\n",
+    "            for student in attending_students:\n",
+    "                attendance_data.append((date, student[0], course_name, True))\n",
+    "            # 剩下的学生标记为未出勤\n",
+    "            non_attending_students = [student for student in selected_students if student not in attending_students]\n",
+    "            for student in non_attending_students:\n",
+    "                attendance_data.append((date, student[0], course_name, False))\n",
+    "\n",
+    "    # 插入出勤数据\n",
+    "    cursor.executemany(\"INSERT INTO attendance_info (date, stu_id, course_name, is_attendance) VALUES (%s, %s, %s, %s)\", attendance_data)\n",
+    "\n",
+    "    # 提交事务\n",
+    "    conn.commit()\n",
+    "except Exception as e:\n",
+    "    # 如果发生错误，回滚事务\n",
+    "    conn.rollback()\n",
+    "    print(f\"An error occurred: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4,)\n"
+      "[(datetime.date(2025, 3, 28), 30, 27, Decimal('0.9000')), (datetime.date(2025, 3, 30), 30, 28, Decimal('0.9333'))]\n"
      ]
     }
    ],
    "source": [
-    "print(results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table_name = 'class1'\n",
     "cursor.execute(\"\"\"\n",
-    "    SELECT COLUMN_NAME\n",
-    "    FROM INFORMATION_SCHEMA.COLUMNS\n",
-    "    WHERE TABLE_NAME = '%s'\n",
-    "\"\"\" % table_name)\n",
-    "\n",
-    "# 获取列名\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table_name = 'class1'\n",
-    "sql =f\"INSERT INTO {table_name} (name, gender, age) VALUES(%s, %s, %s)\"\n",
-    "cursor.execute(sql, [ 'e', 'male', 18])  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(1, 'a', 'female', 18), (2, 'b', 'male', 18), (3, 'c', 'male', 18), (4, 'd', 'male', 18)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "cursor.execute('SELECT * FROM class1')\n",
-    "results = cursor.fetchall()\n",
-    "print(results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sql = f'SELECT id, name FROM test'\n",
-    "cursor.execute(sql)\n",
-    "res = cursor.fetchall()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 'a'), (2, 'trump')]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res"
+    "SELECT total.date, total.count1, attend.count2, attend.count2 / total.count1\n",
+    "        FROM \n",
+    "            (SELECT date, COUNT(*) AS count1\n",
+    "            FROM attendance_info\n",
+    "            WHERE course_name='course_12'\n",
+    "            GROUP BY date\n",
+    "            ) AS total\n",
+    "        JOIN\n",
+    "            (SELECT date, COUNT(*) AS count2\n",
+    "            FROM attendance_info\n",
+    "            WHERE course_name = 'course_12' AND is_attendance = TRUE\n",
+    "            GROUP BY date) as attend\n",
+    "        ON total.date = attend.date\n",
+    "        GROUP BY total.date;\"\"\")\n",
+    "print(cursor.fetchall())"
    ]
   }
  ],
