完成了课程出勤情况、具体某一天课程的出勤人员、每个人的缺勤情况的展示

--- a/scripts/database_related_operation.ipynb
+++ b/scripts/database_related_operation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,51 +11,19 @@
     "\n",
     "conn = connector.connect(    \n",
     "    host='localhost',\n",
-    "    database='attendance_system',\n",
     "    user='root',\n",
     "    password='root')\n",
     "\n",
-    "cursor = conn.cursor()\n"
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# 检查并创建schema\n",
+    "cursor.execute(\"CREATE SCHEMA IF NOT EXISTS attendance_system\")\n",
+    "cursor.execute(\"USE attendance_system\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('course',)\n",
-      "[('course_name', 'varchar(100)', 'NO', 'PRI', None, ''), ('teacher_username', 'varchar(100)', 'NO', 'MUL', None, '')]\n",
-      "\n",
-      "('course_student',)\n",
-      "[('student_id', 'int', 'YES', 'MUL', None, ''), ('course_name', 'varchar(100)', 'YES', 'MUL', None, '')]\n",
-      "\n",
-      "('student',)\n",
-      "[('id', 'int', 'NO', 'PRI', None, 'auto_increment'), ('gender', \"enum('男','女')\", 'YES', '', None, ''), ('age', 'char(3)', 'YES', '', None, ''), ('name', 'varchar(100)', 'YES', '', None, '')]\n",
-      "\n",
-      "('teacher',)\n",
-      "[('name', 'varchar(100)', 'NO', '', None, ''), ('username', 'varchar(100)', 'NO', 'PRI', None, ''), ('password', 'varchar(100)', 'NO', '', None, '')]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "cursor.execute(\"SHOW TABLES\")\n",
-    "tables = cursor.fetchall()\n",
-    "for table in tables:\n",
-    "    print(table)\n",
-    "    cursor.execute(f\"DESC {table[0]}\")\n",
-    "    print(cursor.fetchall())\n",
-    "    print()\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -63,6 +31,8 @@
    },
    "outputs": [],
    "source": [
+    "# 该格子用于创建对应的表。包括学生表，教师表，课程表，课程学生表，考勤表\n",
+    "\n",
     "# 开始事务\n",
     "conn.start_transaction()\n",
     "\n",
@@ -100,7 +70,7 @@
     "    CREATE TABLE IF NOT EXISTS course (\n",
     "        course_name VARCHAR(100) NOT NULL PRIMARY KEY,\n",
     "        teacher_username VARCHAR(100) NOT NULL,\n",
-    "        FOREIGN KEY (teacher_username) REFERENCES teacher(username)\n",
+    "        FOREIGN KEY (teacher_username) REFERENCES teacher(username) On DELETE CASCADE\n",
     "    )\n",
     "    \"\"\"\n",
     "    cursor.execute(create_course_table)\n",
@@ -117,6 +87,20 @@
     "    \"\"\"\n",
     "    cursor.execute(create_course_student_table)\n",
     "\n",
+    "    # Create the attendance_info table\n",
+    "    create_attendance_info_table = \"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS attendance_info (\n",
+    "        date DATE NOT NULL,\n",
+    "        stu_id INT NOT NULL,\n",
+    "        course_name VARCHAR(100) NOT NULL,\n",
+    "        is_attendance BOOLEAN NOT NULL,\n",
+    "        PRIMARY KEY (date, stu_id, course_name),\n",
+    "        FOREIGN KEY (stu_id) REFERENCES student(id) ON DELETE CASCADE,\n",
+    "        FOREIGN KEY (course_name) REFERENCES course(course_name) ON DELETE CASCADE\n",
+    "    )\n",
+    "    \"\"\"\n",
+    "    cursor.execute(create_attendance_info_table)\n",
+    "\n",
     "    # Commit the changes\n",
     "    conn.commit()\n",
     "except Exception as e:\n",
@@ -127,127 +111,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "\n",
-    "# 随机生成老师和课程数据\n",
-    "teachers = []\n",
-    "courses = []\n",
-    "\n",
-    "teacher_names = [\"Alice\", \"Bob\", \"Charlie\", \"David\", \"Eva\", \"Frank\", \"Grace\", \"Hannah\", \"Ivy\", \"Jack\", \"Kathy\", \"Leo\", \"Mona\", \"Nina\", \"Oscar\", \"Paul\", \"Quincy\", \"Rachel\", \"Steve\", \"Tina\", \"Uma\", \"Victor\", \"Wendy\", \"Xander\", \"Yara\", \"Zane\", \"Aaron\", \"Bella\", \"Cindy\", \"Derek\"]\n",
-    "\n",
-    "for name in teacher_names:\n",
-    "    teachers.append((name, name, name))\n",
-    "\n",
-    "for i in range(60):\n",
-    "    course_name = f\"Course_{i+1}\"\n",
-    "    teacher_username = random.choice(teacher_names)\n",
-    "    courses.append((course_name, teacher_username))\n",
-    "\n",
-    "try:\n",
-    "    # 开始事务\n",
-    "    conn.start_transaction()\n",
-    "\n",
-    "    # 插入老师数据\n",
-    "    cursor.executemany(\"INSERT INTO teacher (name, username, password) VALUES (%s, %s, %s)\", teachers)\n",
-    "\n",
-    "    # 插入课程数据\n",
-    "    cursor.executemany(\"INSERT INTO course (course_name, teacher_username) VALUES (%s, %s)\", courses)\n",
-    "\n",
-    "    # 提交事务\n",
-    "    conn.commit()\n",
-    "except Exception as e:\n",
-    "    # 如果发生错误，回滚事务\n",
-    "    conn.rollback()\n",
-    "    print(f\"An error occurred: {e}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('new',)]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
     }
-   ],
-   "source": [
-    "query = '''\n",
-    "        SHOW TABLES'''\n",
-    "\n",
-    "cursor.execute(query)\n",
-    "result = cursor.fetchall()\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('x',)]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "q = \"\"\"\n",
-    "    SELECT name\n",
-    "    FROM new\n",
-    "    WHERE id = 1\"\"\"\n",
-    "\n",
-    "cursor.execute(q)\n",
-    "res = cursor.fetchall()\n",
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"\"\"\n",
-    "        SELECT COUNT(*)\n",
-    "        FROM INFORMATION_SCHEMA.COLUMNS\n",
-    "        WHERE table_name = 'class1';\n",
-    "\"\"\"\n",
-    "table = 'class1'\n",
-    "cursor.execute('SELECT COUNT(*) FROM %s' %  table)\n",
-    "results = cursor.fetchone()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4,)\n"
+      "回滚了之前可能存在的事务\n",
+      "All content deleted from table: attendance_info\n",
+      "All content deleted from table: course\n",
+      "All content deleted from table: course_student\n",
+      "All content deleted from table: student\n",
+      "All content deleted from table: teacher\n"
      ]
     }
    ],
    "source": [
-    "print(results)"
+    "# Retrieve the list of tables in the schema\n",
+    "cursor.execute(\"\"\"\n",
+    "SELECT TABLE_NAME\n",
+    "FROM INFORMATION_SCHEMA.TABLES\n",
+    "WHERE TABLE_SCHEMA = 'attendance_system'\n",
+    "\"\"\")\n",
+    "tables = cursor.fetchall()\n",
+    "\n",
+    "# Delete the content of each table\n",
+    "try:\n",
+    "    try:\n",
+    "        conn.rollback()\n",
+    "        print(\"回滚了之前可能存在的事务\")\n",
+    "    except:\n",
+    "        pass\n",
+    "    # Start transaction\n",
+    "    conn.start_transaction()\n",
+    "\n",
+    "    # Disable foreign key checks\n",
+    "    cursor.execute(\"SET FOREIGN_KEY_CHECKS = 0\")\n",
+    "\n",
+    "    for table in tables:\n",
+    "        table_name = table[0]\n",
+    "        cursor.execute(f\"DELETE FROM {table_name}\")\n",
+    "        print(f\"All content deleted from table: {table_name}\")\n",
+    "\n",
+    "    # Enable foreign key checks\n",
+    "    cursor.execute(\"SET FOREIGN_KEY_CHECKS = 1\")\n",
+    "\n",
+    "    # Commit transaction\n",
+    "    conn.commit()\n",
+    "except Exception as e:\n",
+    "    # Rollback transaction in case of error\n",
+    "    conn.rollback()\n",
+    "    print(f\"An error occurred: {e}\")\n"
    ]
   },
   {
@@ -256,76 +175,111 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table_name = 'class1'\n",
-    "cursor.execute(\"\"\"\n",
-    "    SELECT COLUMN_NAME\n",
-    "    FROM INFORMATION_SCHEMA.COLUMNS\n",
-    "    WHERE TABLE_NAME = '%s'\n",
-    "\"\"\" % table_name)\n",
+    "# 随机插入数据库的数据\n",
     "\n",
-    "# 获取列名\n",
-    "\n"
+    "import random\n",
+    "import datetime\n",
+    "\n",
+    "# Generate teacher data\n",
+    "teacher_names = [\"Alice\", \"Bob\", \"Charlie\", \"David\", \"Eva\", \"Frank\", \"Grace\", \"Hannah\", \"Ivy\", \"Jack\",\n",
+    "                 \"Kathy\", \"Leo\", \"Mona\", \"Nina\", \"Oscar\", \"Paul\", \"Quincy\", \"Rachel\", \"Steve\", \"Tina\"]\n",
+    "teachers = [(name, name, name) for name in teacher_names]\n",
+    "\n",
+    "# Generate course data and ensure each teacher has at least 3 courses\n",
+    "courses = []\n",
+    "for i in range(len(teachers)):\n",
+    "    for j in range(3):  # Assign at least 3 courses to each teacher\n",
+    "        course_name = f\"Course_{len(courses) + 1}\"\n",
+    "        teacher_username = teachers[i][1]\n",
+    "        courses.append((course_name, teacher_username))\n",
+    "\n",
+    "# Assign remaining courses randomly to teachers\n",
+    "for i in range(len(courses), 60):  # Total 60 courses\n",
+    "    course_name = f\"Course_{i + 1}\"\n",
+    "    teacher_username = random.choice(teachers)[1]\n",
+    "    courses.append((course_name, teacher_username))\n",
+    "\n",
+    "# Generate student data with realistic names\n",
+    "first_names = [\"John\", \"Jane\", \"Michael\", \"Emily\", \"Chris\", \"Anna\", \"Tom\", \"Sophia\", \"James\", \"Olivia\"]\n",
+    "last_names = [\"Smith\", \"Johnson\", \"Brown\", \"Taylor\", \"Anderson\", \"Thomas\", \"Jackson\", \"White\", \"Harris\", \"Martin\"]\n",
+    "students = [(i + 1, random.choice(['男', '女']), str(random.randint(18, 25)),\n",
+    "             f\"{random.choice(first_names)} {random.choice(last_names)}\") for i in range(500)]\n",
+    "\n",
+    "# Generate course_student data ensuring no duplicates\n",
+    "course_student = []\n",
+    "for course in courses:\n",
+    "    course_name = course[0]\n",
+    "    student_ids = random.sample(range(1, 501), random.randint(30, 40))\n",
+    "    for student_id in student_ids:\n",
+    "        course_student.append((course_name, student_id))\n",
+    "\n",
+    "# Generate attendance data\n",
+    "start_date = datetime.date(2025, 3, 1)\n",
+    "end_date = datetime.date(2025, 3, 26)\n",
+    "date_range = [start_date + datetime.timedelta(days=x) for x in range((end_date - start_date).days + 1)]\n",
+    "\n",
+    "attendance_data = []\n",
+    "try:\n",
+    "    # Start transaction\n",
+    "    conn.start_transaction()\n",
+    "\n",
+    "    # Insert teacher data\n",
+    "    cursor.executemany(\"INSERT INTO teacher (name, username, password) VALUES (%s, %s, %s)\", teachers)\n",
+    "\n",
+    "    # Insert course data\n",
+    "    cursor.executemany(\"INSERT INTO course (course_name, teacher_username) VALUES (%s, %s)\", courses)\n",
+    "\n",
+    "    # Insert student data\n",
+    "    cursor.executemany(\"INSERT INTO student (id, gender, age, name) VALUES (%s, %s, %s, %s)\", students)\n",
+    "\n",
+    "    # Insert course_student data\n",
+    "    cursor.executemany(\"INSERT INTO course_student (course_name, student_id) VALUES (%s, %s)\", course_student)\n",
+    "\n",
+    "    # Generate and insert attendance data\n",
+    "    for date in date_range:\n",
+    "        selected_courses = random.sample(courses, 10)  # Select 10 courses per day\n",
+    "        for course in selected_courses:\n",
+    "            course_name = course[0]\n",
+    "            course_students = [cs[1] for cs in course_student if cs[0] == course_name]\n",
+    "            attendance_rate = random.uniform(0.9, 0.99)\n",
+    "            num_attending = int(attendance_rate * len(course_students))\n",
+    "            attending_students = random.sample(course_students, num_attending)\n",
+    "            for student_id in course_students:\n",
+    "                is_attendance = student_id in attending_students\n",
+    "                attendance_data.append((date, student_id, course_name, is_attendance))\n",
+    "\n",
+    "    cursor.executemany(\"INSERT INTO attendance_info (date, stu_id, course_name, is_attendance) VALUES (%s, %s, %s, %s)\", attendance_data)\n",
+    "\n",
+    "    # Commit transaction\n",
+    "    conn.commit()\n",
+    "except Exception as e:\n",
+    "    # Rollback transaction in case of error\n",
+    "    conn.rollback()\n",
+    "    print(f\"An error occurred: {e}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table_name = 'class1'\n",
-    "sql =f\"INSERT INTO {table_name} (name, gender, age) VALUES(%s, %s, %s)\"\n",
-    "cursor.execute(sql, [ 'e', 'male', 18])  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(1, 'a', 'female', 18), (2, 'b', 'male', 18), (3, 'c', 'male', 18), (4, 'd', 'male', 18)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "cursor.execute('SELECT * FROM class1')\n",
-    "results = cursor.fetchall()\n",
-    "print(results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sql = f'SELECT id, name FROM test'\n",
-    "cursor.execute(sql)\n",
-    "res = cursor.fetchall()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, 'a'), (2, 'trump')]"
+       "('Olivia Johnson', 28, 1)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res"
+    "cursor.execute(\"\"\"SELECT name, id, is_attendance\n",
+    "FROM attendance_info AS a INNER JOIN student AS b\n",
+    "WHERE a.stu_id = b.id and course_name = 'course_10' and date = '2025-3-22';\"\"\")\n",
+    "res = cursor.fetchall()\n",
+    "res[0]"
    ]
   }
  ],
