刚刚数据生成的代码出问题了，重新生成了一份，先提交保存了

--- a/scripts/database_related_operation.ipynb
+++ b/scripts/database_related_operation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,42 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('course',)\n",
-      "[('course_name', 'varchar(100)', 'NO', 'PRI', None, ''), ('teacher_username', 'varchar(100)', 'NO', 'MUL', None, '')]\n",
-      "\n",
-      "('course_student',)\n",
-      "[('student_id', 'int', 'YES', 'MUL', None, ''), ('course_name', 'varchar(100)', 'YES', 'MUL', None, '')]\n",
-      "\n",
-      "('student',)\n",
-      "[('id', 'int', 'NO', 'PRI', None, 'auto_increment'), ('gender', \"enum('男','女')\", 'YES', '', None, ''), ('age', 'char(3)', 'YES', '', None, ''), ('name', 'varchar(100)', 'YES', '', None, '')]\n",
-      "\n",
-      "('teacher',)\n",
-      "[('name', 'varchar(100)', 'NO', '', None, ''), ('username', 'varchar(100)', 'NO', 'PRI', None, ''), ('password', 'varchar(100)', 'NO', '', None, '')]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "cursor.execute(\"SHOW TABLES\")\n",
-    "tables = cursor.fetchall()\n",
-    "for table in tables:\n",
-    "    print(table)\n",
-    "    cursor.execute(f\"DESC {table[0]}\")\n",
-    "    print(cursor.fetchall())\n",
-    "    print()\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -91,7 +56,8 @@
     "        id INT NOT NULL AUTO_INCREMENT PRIMARY KEY,\n",
     "        gender ENUM('男', '女') NULL,\n",
     "        age CHAR(3) NULL,\n",
-    "        name VARCHAR(100) NULL\n",
+    "        name VARCHAR(100) NULL,\n",
+    "        is_face_collected BOOLEAN NOT NULL DEFAULT FALSE\n",
     "    )\n",
     "    \"\"\"\n",
     "    cursor.execute(create_student_table)\n",
@@ -142,17 +108,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table: attendance_info\n",
+      "CREATE TABLE `attendance_info` (\n",
+      "  `date` date NOT NULL,\n",
+      "  `stu_id` int NOT NULL,\n",
+      "  `course_name` varchar(100) NOT NULL,\n",
+      "  `is_attendance` tinyint(1) NOT NULL,\n",
+      "  PRIMARY KEY (`date`,`stu_id`,`course_name`),\n",
+      "  KEY `stu_id` (`stu_id`),\n",
+      "  KEY `course_name` (`course_name`),\n",
+      "  CONSTRAINT `attendance_info_ibfk_1` FOREIGN KEY (`stu_id`) REFERENCES `student` (`id`) ON DELETE CASCADE,\n",
+      "  CONSTRAINT `attendance_info_ibfk_2` FOREIGN KEY (`course_name`) REFERENCES `course` (`course_name`) ON DELETE CASCADE\n",
+      ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci\n",
+      "\n",
+      "\n",
+      "Table: course\n",
+      "CREATE TABLE `course` (\n",
+      "  `course_name` varchar(100) NOT NULL,\n",
+      "  `teacher_username` varchar(100) NOT NULL,\n",
+      "  PRIMARY KEY (`course_name`),\n",
+      "  KEY `teacher_username` (`teacher_username`),\n",
+      "  CONSTRAINT `course_ibfk_1` FOREIGN KEY (`teacher_username`) REFERENCES `teacher` (`username`) ON DELETE CASCADE\n",
+      ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci\n",
+      "\n",
+      "\n",
+      "Table: course_student\n",
+      "CREATE TABLE `course_student` (\n",
+      "  `course_name` varchar(100) NOT NULL,\n",
+      "  `student_id` int NOT NULL,\n",
+      "  PRIMARY KEY (`course_name`,`student_id`),\n",
+      "  KEY `student_id` (`student_id`),\n",
+      "  CONSTRAINT `course_student_ibfk_1` FOREIGN KEY (`course_name`) REFERENCES `course` (`course_name`) ON DELETE CASCADE,\n",
+      "  CONSTRAINT `course_student_ibfk_2` FOREIGN KEY (`student_id`) REFERENCES `student` (`id`) ON DELETE CASCADE\n",
+      ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci\n",
+      "\n",
+      "\n",
+      "Table: student\n",
+      "CREATE TABLE `student` (\n",
+      "  `id` int NOT NULL AUTO_INCREMENT,\n",
+      "  `gender` enum('男','女') DEFAULT NULL,\n",
+      "  `age` char(3) DEFAULT NULL,\n",
+      "  `name` varchar(100) DEFAULT NULL,\n",
+      "  `is_face_collected` tinyint(1) NOT NULL DEFAULT '0',\n",
+      "  PRIMARY KEY (`id`)\n",
+      ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci\n",
+      "\n",
+      "\n",
+      "Table: teacher\n",
+      "CREATE TABLE `teacher` (\n",
+      "  `name` varchar(100) NOT NULL,\n",
+      "  `username` varchar(100) NOT NULL,\n",
+      "  `password` varchar(100) NOT NULL,\n",
+      "  PRIMARY KEY (`username`)\n",
+      ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Retrieve the list of tables in the schema\n",
     "cursor.execute(\"\"\"\n",
     "SELECT TABLE_NAME\n",
     "FROM INFORMATION_SCHEMA.TABLES\n",
     "WHERE TABLE_SCHEMA = 'attendance_system'\n",
     "\"\"\")\n",
     "tables = cursor.fetchall()\n",
+    "for table in tables:\n",
+    "    table_name = table[0]\n",
+    "    cursor.execute(f\"SHOW CREATE TABLE {table_name}\")\n",
+    "    create_table_query = cursor.fetchone()\n",
+    "    print(f\"Table: {table_name}\")\n",
+    "    print(create_table_query[1])\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "数据生成完成！\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "from faker import Faker\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "fake = Faker(\"zh_CN\")\n",
+    "\n",
+    "# 插入老师数据\n",
+    "teachers = []\n",
+    "for i in range(20):\n",
+    "    name = fake.name()\n",
+    "    username = name\n",
+    "    password = name\n",
+    "    teachers.append((name, username, password))\n",
+    "\n",
+    "cursor.executemany(\n",
+    "    \"INSERT INTO teacher (name, username, password) VALUES (%s, %s, %s)\", teachers\n",
+    ")\n",
+    "conn.commit()\n",
+    "\n",
+    "# 插入课程数据\n",
+    "courses = []\n",
+    "for i in range(50):\n",
+    "    course_name = f\"Course_{i+1}\"\n",
+    "    teacher_username = random.choice(teachers)[1]\n",
+    "    courses.append((course_name, teacher_username))\n",
+    "\n",
+    "cursor.executemany(\n",
+    "    \"INSERT INTO course (course_name, teacher_username) VALUES (%s, %s)\", courses\n",
+    ")\n",
+    "conn.commit()\n",
+    "\n",
+    "# 插入学生数据\n",
+    "students = []\n",
+    "for i in range(500):\n",
+    "    name = fake.name()\n",
+    "    gender = random.choice([\"男\", \"女\"])\n",
+    "    age = str(random.randint(18, 25))\n",
+    "    is_face_collected = random.choice([True, False])\n",
+    "    students.append((gender, age, name, is_face_collected))\n",
+    "\n",
+    "cursor.executemany(\n",
+    "    \"INSERT INTO student (gender, age, name, is_face_collected) VALUES (%s, %s, %s, %s)\",\n",
+    "    students,\n",
+    ")\n",
+    "conn.commit()\n",
+    "\n",
+    "# 插入课程学生数据\n",
+    "course_student = []\n",
+    "for student_id in range(1, 501):\n",
+    "    enrolled_courses = random.sample(courses, random.randint(5, 8))\n",
+    "    for course in enrolled_courses:\n",
+    "        course_student.append((course[0], student_id))\n",
+    "\n",
+    "cursor.executemany(\n",
+    "    \"INSERT INTO course_student (course_name, student_id) VALUES (%s, %s)\", course_student\n",
+    ")\n",
+    "conn.commit()\n",
+    "\n",
+    "# 插入签到表数据\n",
+    "attendance_info = []\n",
+    "start_date = datetime(2025, 3, 20)\n",
+    "end_date = datetime(2025, 3, 26)\n",
+    "date_range = (end_date - start_date).days + 1\n",
+    "\n",
+    "for day in range(date_range):\n",
+    "    current_date = start_date + timedelta(days=day)\n",
+    "    for course in courses:\n",
+    "        course_name = course[0]\n",
+    "        enrolled_students = [\n",
+    "            student_id\n",
+    "            for course_name_, student_id in course_student\n",
+    "            if course_name_ == course_name\n",
+    "        ]\n",
+    "        attendance_count = int(len(enrolled_students) * random.uniform(0.9, 0.99))\n",
+    "        attending_students = random.sample(enrolled_students, attendance_count)\n",
+    "        for student_id in attending_students:\n",
+    "            attendance_info.append((current_date, student_id, course_name, True))\n",
+    "\n",
+    "cursor.executemany(\n",
+    "    \"INSERT INTO attendance_info (date, stu_id, course_name, is_attendance) VALUES (%s, %s, %s, %s)\",\n",
+    "    attendance_info,\n",
+    ")\n",
+    "conn.commit()\n",
+    "\n",
+    "print(\"数据生成完成！\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 删除表里的所欲数据\n",
+    "\n",
     "\n",
     "# Delete the content of each table\n",
     "try:\n",
@@ -249,101 +394,6 @@
     "table = 'class1'\n",
     "cursor.execute('SELECT COUNT(*) FROM %s' %  table)\n",
     "results = cursor.fetchone()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(4,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table_name = 'class1'\n",
-    "cursor.execute(\"\"\"\n",
-    "    SELECT COLUMN_NAME\n",
-    "    FROM INFORMATION_SCHEMA.COLUMNS\n",
-    "    WHERE TABLE_NAME = '%s'\n",
-    "\"\"\" % table_name)\n",
-    "\n",
-    "# 获取列名\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table_name = 'class1'\n",
-    "sql =f\"INSERT INTO {table_name} (name, gender, age) VALUES(%s, %s, %s)\"\n",
-    "cursor.execute(sql, [ 'e', 'male', 18])  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(1, 'a', 'female', 18), (2, 'b', 'male', 18), (3, 'c', 'male', 18), (4, 'd', 'male', 18)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "cursor.execute('SELECT * FROM class1')\n",
-    "results = cursor.fetchall()\n",
-    "print(results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sql = f'SELECT id, name FROM test'\n",
-    "cursor.execute(sql)\n",
-    "res = cursor.fetchall()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 'a'), (2, 'trump')]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res"
    ]
   }
  ],
