--- a/scripts/database_related_operation.ipynb
+++ b/scripts/database_related_operation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -203,19 +203,25 @@
     }
    ],
    "source": [
+    "# 生成数据\n",
     "import random\n",
     "from faker import Faker\n",
     "from datetime import datetime, timedelta\n",
     "\n",
+    "\n",
+    "cursor.execute(\"USE attendance_system\")\n",
     "fake = Faker(\"zh_CN\")\n",
     "\n",
     "# 插入老师数据\n",
-    "teachers = []\n",
-    "for i in range(20):\n",
+    "teachers = []  # Use a list to store unique teachers\n",
+    "existing_usernames = set()  # Track unique usernames\n",
+    "while len(teachers) < 20:\n",
     "    name = fake.name()\n",
     "    username = name\n",
     "    password = name\n",
-    "    teachers.append((name, username, password))\n",
+    "    if username not in existing_usernames:  # Ensure uniqueness\n",
+    "        teachers.append((name, username, password))\n",
+    "        existing_usernames.add(username)\n",
     "\n",
     "cursor.executemany(\n",
     "    \"INSERT INTO teacher (name, username, password) VALUES (%s, %s, %s)\", teachers\n",
@@ -223,9 +229,31 @@
     "conn.commit()\n",
     "\n",
     "# 插入课程数据\n",
+    "# 定义50个真实的中文课程名称\n",
+    "course_names = [\n",
+    "    # 理工类课程\n",
+    "    \"高等数学\", \"线性代数\", \"概率论与数理统计\", \"大学物理\", \"工程力学\",\n",
+    "    \"电路分析基础\", \"模拟电子技术\", \"数字电子技术\", \"信号与系统\", \"自动控制原理\",\n",
+    "    \"数据结构与算法\", \"计算机组成原理\", \"操作系统\", \"计算机网络\", \"数据库系统原理\",\n",
+    "    \"软件工程\", \"人工智能导论\", \"机器学习\", \"深度学习\", \"计算机视觉\",\n",
+    "    \n",
+    "    # 文科类课程\n",
+    "    \"中国近现代史纲要\", \"马克思主义基本原理\", \"思想道德修养与法律基础\", \"毛泽东思想与中国特色社会主义理论体系概论\", \"形势与政策\",\n",
+    "    \"大学英语\", \"学术英语写作\", \"中国文学史\", \"世界文学史\", \"新闻采访与写作\",\n",
+    "    \n",
+    "    # 商科类课程\n",
+    "    \"微观经济学\", \"宏观经济学\", \"管理学原理\", \"会计学原理\", \"财务管理\",\n",
+    "    \"市场营销学\", \"国际贸易实务\", \"电子商务概论\", \"企业战略管理\", \"人力资源管理\",\n",
+    "    \n",
+    "    # 医学/生物类课程\n",
+    "    \"人体解剖学\", \"生理学\", \"病理学\", \"药理学\", \"免疫学基础\",\n",
+    "    \"生物化学\", \"分子生物学\", \"遗传学\", \"微生物学\", \"有机化学\"\n",
+    "]\n",
+    "\n",
+    "# 替换原有的课程生成代码\n",
     "courses = []\n",
     "for i in range(50):\n",
-    "    course_name = f\"Course_{i+1}\"\n",
+    "    course_name = course_names[i]  # 使用预定义的课程名称\n",
     "    teacher_username = random.choice(teachers)[1]\n",
     "    courses.append((course_name, teacher_username))\n",
     "\n",
@@ -240,7 +268,7 @@
     "    name = fake.name()\n",
     "    gender = random.choice([\"男\", \"女\"])\n",
     "    age = str(random.randint(18, 25))\n",
-    "    is_face_collected = random.choice([True, False])\n",
+    "    is_face_collected = False\n",
     "    students.append((gender, age, name, is_face_collected))\n",
     "\n",
     "cursor.executemany(\n",
@@ -249,9 +277,13 @@
     ")\n",
     "conn.commit()\n",
     "\n",
+    "# 获取学生的实际 ID\n",
+    "cursor.execute(\"SELECT id FROM student\")\n",
+    "student_ids = [row[0] for row in cursor.fetchall()]\n",
+    "\n",
     "# 插入课程学生数据\n",
     "course_student = []\n",
-    "for student_id in range(1, 501):\n",
+    "for student_id in student_ids:\n",
     "    enrolled_courses = random.sample(courses, random.randint(5, 8))\n",
     "    for course in enrolled_courses:\n",
     "        course_student.append((course[0], student_id))\n",
@@ -292,13 +324,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "回滚了之前可能存在的事务\n",
+      "All content deleted from table: attendance_info\n",
+      "All content deleted from table: course\n",
+      "All content deleted from table: course_student\n",
+      "All content deleted from table: student\n",
+      "All content deleted from table: teacher\n"
+     ]
+    }
+   ],
    "source": [
     "# 删除表里的所欲数据\n",
     "\n",
-    "\n",
+    "cursor.execute(\"\"\"\n",
+    "SELECT TABLE_NAME\n",
+    "FROM INFORMATION_SCHEMA.TABLES\n",
+    "WHERE TABLE_SCHEMA = 'attendance_system'\n",
+    "\"\"\")\n",
+    "tables = cursor.fetchall()\n",
     "# Delete the content of each table\n",
     "try:\n",
     "    try:\n",
